--- a/Virtual Tourist/Assets/Base.lproj/Main.storyboard
+++ b/Virtual Tourist/Assets/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -31,11 +32,98 @@
                     <navigationItem key="navigationItem" title="Travel Locations" id="qhn-Nn-xAp"/>
                     <connections>
                         <outlet property="mapView" destination="Ksp-bG-KvV" id="XCF-P5-bI6"/>
+                        <segue destination="A4d-Ie-CTY" kind="show" identifier="showPhotoAlbums" id="EzR-XD-YAy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="137.94642857142856"/>
+        </scene>
+        <!--Photo Album-->
+        <scene sceneID="Z2O-cd-1w2">
+            <objects>
+                <viewController storyboardIdentifier="photoAblumViewController" id="A4d-Ie-CTY" customClass="PhotoAlbumViewController" customModule="Virtual_Tourist" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zQD-lw-yIW">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="3oV-Ds-3Gf">
+                                <rect key="frame" x="0.0" y="88" width="414" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="971-TX-eh5"/>
+                                </constraints>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wij-wd-UDk">
+                                <rect key="frame" x="0.0" y="812" width="414" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="GBu-2i-Yt6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                <state key="normal" title="New Collection"/>
+                                <connections>
+                                    <action selector="newCollectionButtonTapped:" destination="A4d-Ie-CTY" eventType="touchUpInside" id="H68-Bh-Ad3"/>
+                                </connections>
+                            </button>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="X9X-Sb-3Ta">
+                                <rect key="frame" x="0.0" y="240" width="414" height="570"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="jht-qR-SW5">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="photoAlbumCollectionViewCell" id="w0b-mD-JEa" customClass="PhotoAlbumCollectionViewCell" customModule="Virtual_Tourist" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="180" height="139"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="jxv-4n-I6K">
+                                            <rect key="frame" x="0.0" y="0.0" width="180" height="139"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="88i-M6-rcd">
+                                                    <rect key="frame" x="0.0" y="0.0" width="180" height="139"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="88i-M6-rcd" firstAttribute="leading" secondItem="jxv-4n-I6K" secondAttribute="leading" id="Ac3-Yu-caD"/>
+                                                <constraint firstAttribute="bottom" secondItem="88i-M6-rcd" secondAttribute="bottom" id="Wm9-1J-wly"/>
+                                                <constraint firstAttribute="trailing" secondItem="88i-M6-rcd" secondAttribute="trailing" id="aeM-ha-iYQ"/>
+                                                <constraint firstItem="88i-M6-rcd" firstAttribute="top" secondItem="jxv-4n-I6K" secondAttribute="top" id="l9E-v6-20g"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="180" height="139"/>
+                                        <connections>
+                                            <outlet property="photoImageView" destination="88i-M6-rcd" id="4Nd-kw-snh"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="wij-wd-UDk" firstAttribute="trailing" secondItem="kMS-rX-PG9" secondAttribute="trailing" id="17q-jG-NdH"/>
+                            <constraint firstItem="wij-wd-UDk" firstAttribute="leading" secondItem="kMS-rX-PG9" secondAttribute="leading" id="5H4-4q-HAJ"/>
+                            <constraint firstItem="wij-wd-UDk" firstAttribute="bottom" secondItem="kMS-rX-PG9" secondAttribute="bottom" id="Agk-cT-g69"/>
+                            <constraint firstItem="wij-wd-UDk" firstAttribute="top" secondItem="X9X-Sb-3Ta" secondAttribute="bottom" constant="2" id="D5i-kh-B8t"/>
+                            <constraint firstItem="3oV-Ds-3Gf" firstAttribute="top" secondItem="kMS-rX-PG9" secondAttribute="top" id="TvX-ex-Tys"/>
+                            <constraint firstItem="3oV-Ds-3Gf" firstAttribute="trailing" secondItem="kMS-rX-PG9" secondAttribute="trailing" id="bzw-nu-8iO"/>
+                            <constraint firstItem="3oV-Ds-3Gf" firstAttribute="leading" secondItem="kMS-rX-PG9" secondAttribute="leading" id="hEY-jy-AF0"/>
+                            <constraint firstItem="X9X-Sb-3Ta" firstAttribute="top" secondItem="3oV-Ds-3Gf" secondAttribute="bottom" constant="2" id="ltQ-bB-cvy"/>
+                            <constraint firstItem="X9X-Sb-3Ta" firstAttribute="trailing" secondItem="kMS-rX-PG9" secondAttribute="trailing" id="wh4-AQ-8ET"/>
+                            <constraint firstItem="X9X-Sb-3Ta" firstAttribute="leading" secondItem="kMS-rX-PG9" secondAttribute="leading" id="zQn-bW-nTF"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="kMS-rX-PG9"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Photo Album" id="C1s-jy-mb7"/>
+                    <connections>
+                        <outlet property="mapView" destination="3oV-Ds-3Gf" id="wb7-zg-Tdv"/>
+                        <outlet property="photoAlbumCollectionView" destination="X9X-Sb-3Ta" id="u4r-Xb-2y6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HRZ-sf-6uX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2147.826086956522" y="137.94642857142856"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="wl5-KF-9W5">
@@ -56,4 +144,7 @@
             <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="placeholder" width="65" height="65"/>
+    </resources>
 </document>
